# computational-intelligence-22

./: README.md  pyproject.toml
algorithms/: genetic_algorithms.ipynb
final-project/: README.md  main.py
lab1/: README.md  graph.py  main.py  problem.py  solution.py
lab2/: README.md  set_covering_ga.ipynb
lab3/: README.md  nim.ipynb
